Fix DoseCalc table jumping when you click the third cell

--- a/src/styles/DoseCalc.scss
+++ b/src/styles/DoseCalc.scss
@@ -16,13 +16,12 @@
     text-align: left;
     border-right: 2px solid #EBECEC;
   }
-  // th:last-child {
-  //   border-right: 0px;
-  // }
+  th:last-child {
+    border-right: 0px;
+  }
   td {
     // text-align: center;
     border-right: 2px solid #EBECEC;
-    border-bottom: 2px solid #EBECEC;
     button {
       cursor: pointer;
       padding: 5px 0px;
@@ -34,10 +33,10 @@
       border: 0;
     }
   }
-  // td:last-child {
-  //   border-top: 2px solid #EBECEC;
-  //   border-bottom: 0px;
-  // }
+  td:last-child {
+    border-top: 2px solid #EBECEC;
+    border-bottom: 0px;
+  }
   td.not-selected {
     padding: 15px 0px;
   }
